FLa4a NEWS

CHANGES IN FLa4a 0.300.x:

	NEW FEATURES:
		Models can have up to 500 characters instead of the default 60. The previous limitation was creating problems, for example, when fitting models for individual ages, which were longer than 60 characters. 
	BUG FIXES:
		

CHANGES IN FLa4a 0.200.x:

	NEW FEATURES:
		added a generalized cross validation score to the fitSumm information 
		message about predictions turned off by default
	BUG FIXES:
		plot(fit, indices) legend added 

CHANGES IN FLa4a 0.150.x:

	NEW FEATURES:
		predict methods revised, not possible to predict stkpars of submodels
		tests updated
	BUG FIXES:
		predict of age specific biomass index now returns quant="all" and not the age range 
		default qmodel with sca was failing when index had less then 4 ages, now it sets ~1 if one age, ~age if 2 or 3 ages, ~s(age, k=??) for more then 3 ages
		
CHANGES IN FLa4a 0.140.x:

	NEW FEATURES:
		variance covariance matrix now comes from ADMB cov binary instead of inverting the hessian
	BUG FIXES:
		a4aInternal was accepting zero variances, now fixed 

CHANGES IN FLa4a 0.130.0:

	NEW FEATURES:
		tests on simulate revised and extended
		tests on WCSAM revised
	BUG FIXES:
		mvrnorm bugfix for empirical = T and n < length(mu) fixed by an internal function "mvrEmpT" which is called by simulate. 

CHANGES IN FLa4a 0.120.0:

	NEW FEATURES:
		simulate includes the argument "empirical" to be passed to mvrnorm
		l2a checks t0 that generate negative ages
		tests on l2a and predict revised and extended
	BUG FIXES:
		bug on indexing surveytime fixed
		bug on name matching between parameters and indices names fixed


CHANGES IN FLa4a 0.110.0:

	NEW FEATURES:
		class a4aStkParams includes a "wt" slot to carry on stock weights
		method a4aSCA uses an age range for biomass indices that is set in the range slot of the index
		method a4aSCA tags the index FLQuant using attr with info about the range and if it is a biomass index