@@ -1,8 +1,8 @@
 Package: FLa4a
 Type: Package
 Title: A Simple and Robust Statistical Catch at Age Model
-Version: 0.300.2
-Date: 2015-07-20
+Version: 0.500.0
+Date: 2015-11-01
 Author: Colin P. Millar and Ernesto Jardim
 Maintainer: Colin Millar <colinpmillar@googlemail.com> and Ernesto Jardim <ernesto.jardim@jrc.ec.europa.eu>
 Description: A simple and robust statistical Catch at Age model that is specifically designed for stocks with intermediate levels of data quantity and quality.
