@@ -119,7 +119,6 @@ import("methods")
 import("copula")
 import("FLCore")
 import("mgcv")
-#import("splines")
 import("triangle")
 importFrom("lattice",qqmath)
 importFrom("Matrix",bdiag,Diagonal,Matrix)
